// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`xTokens transfer should be correct config 1`] = `
{
  "extrinsic": "transfer",
  "getParams": [Function],
  "pallet": "xTokens",
  "successEvent": "Transferred",
}
`;

exports[`xTokens transfer should get correct params 1`] = `
[
  {
    "Token": "MOVR",
  },
  1000n,
  {
    "V1": {
      "interior": {
        "X2": [
          {
            "Parachain": 1000,
          },
          {
            "AccountKey20": {
              "key": "0xeF46c7649270C912704fB09B75097f6E32208b85",
              "network": "Any",
            },
          },
        ],
      },
      "parents": 1,
    },
  },
  1000000000,
]
`;

exports[`xTokens transferMultiAsset should be correct config 1`] = `
{
  "extrinsic": "transferMultiasset",
  "getParams": [Function],
  "pallet": "xTokens",
  "successEvent": "Transferred",
}
`;

exports[`xTokens transferMultiAsset should get correct params 1`] = `
[
  {
    "V1": {
      "fun": {
        "Fungible": 1000n,
      },
      "id": {
        "Concrete": {
          "interior": {
            "X2": [
              {
                "Parachain": 0,
              },
              {
                "GeneralKey": "ASTR",
              },
            ],
          },
          "parents": 1,
        },
      },
    },
  },
  {
    "V1": {
      "interior": {
        "X2": [
          {
            "Parachain": 1000,
          },
          {
            "AccountKey20": {
              "key": "0xeF46c7649270C912704fB09B75097f6E32208b85",
              "network": "Any",
            },
          },
        ],
      },
      "parents": 1,
    },
  },
  1000000000,
]
`;

exports[`xTokens transferMultiCurrencies should be correct config 1`] = `
{
  "extrinsic": "transferMulticurrencies",
  "getParams": [Function],
  "pallet": "xTokens",
  "successEvent": "Transferred",
}
`;

exports[`xTokens transferMultiCurrencies should get correct params 1`] = `
[
  [
    [
      {
        "Token": "ASTR",
      },
      1000n,
    ],
    [
      {
        "Token": "ASTR",
      },
      99n,
    ],
  ],
  1,
  {
    "V1": {
      "interior": {
        "X2": [
          {
            "Parachain": 1000,
          },
          {
            "AccountKey20": {
              "key": "0xeF46c7649270C912704fB09B75097f6E32208b85",
              "network": "Any",
            },
          },
        ],
      },
      "parents": 1,
    },
  },
  1000000000,
]
`;
